# ASGIJWTSignatureValidatorMiddleware

./: .pre-commit-config.yaml  .whitesource  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yaml
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml  main.yml  run_tests.yml
jwt_signature_validator/: __init__.py  encoded_payload.py
jwt_signature_validator/datastructures/: __init__.py
jwt_signature_validator/exceptions/: __init__.py
scripts/: README.md  build  check  coverage  install  lint  test
tests/: response.py  test_middleware.py  test_smoke.py  utils.py
