[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jwt-signature-validator"
version = "0.0.3"
description = "An ASGI Middleware to get payload from JWTs"
authors = [
    { name = "Irfanuddin Shafi Ahmed", email = "irfanudeen08@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9"
]

[tool.setuptools]
license-files = ["LICENSE"]
package-data = { "jwt_signature_validator" = ["py.typed"] }
include-package-data = true
zip-safe = false

[project.urls]
Homepage = "https://github.com/iudeen/jwt-signature-validator"
Source = "https://github.com/iudeen/jwt-signature-validator"